option question relationship ensurance